fix on mobile view and logo changed@

--- a/css/style_1.css
+++ b/css/style_1.css
@@ -163,5 +163,5 @@ iframe {
 .js .animate-box{opacity:0}#fh5co-title-box{width:38.2%;z-index:555;background-size:cover;background-repeat:no-repeat;background-position:center center}
 .single #fh5co-title-box{position:relative;height:700px;width:100%}#fh5co-title-box .overlay{position:absolute;top:0;bottom:0;left:0;right:0;z-index:10;background:rgba(0,0,0,0.5)}#fh5co-title-box .page-title{z-index:12;position:absolute;bottom:0;padding:30px}
 .single #fh5co-title-box .page-title{width:100%;margin:0 auto;text-align:center}#fh5co-title-box .page-title h2{color:white;font-weight:300}
-.single #fh5co-title-box .page-title h2{font-size:72px}#fh5co-title-box .page-title>span{display:block;color:rgba(255,255,255,0.5);text-transform:uppercase;font-size:15px;letter-spacing:.05em;margin-bottom:10px}#fh5co-title-box .page-title img{margin-bottom:30px;width:80px;-webkit-border-radius:50%;-moz-border-radius:50%;-ms-border-radius:50%;border-radius:50%}#fh5co-single-content{z-index:999;background:white}#fh5co-single-content p,#fh5co-single-content ul li{font-size:1.05rem}
+.single #fh5co-title-box .page-title h2{font-size:52px}#fh5co-title-box .page-title>span{display:block;color:rgba(255,255,255,0.5);text-transform:uppercase;font-size:15px;letter-spacing:.05em;margin-bottom:10px}#fh5co-title-box .page-title img{margin-bottom:30px;width:80px;-webkit-border-radius:50%;-moz-border-radius:50%;-ms-border-radius:50%;border-radius:50%}#fh5co-single-content{z-index:999;background:white}#fh5co-single-content p,#fh5co-single-content ul li{font-size:1.05rem}
 /*# sourceMappingURL=style_1.css.map */
